--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   </head>
 
   <body>
-  	
+  	<div id="content">
     	<header><h1>Ranking list &nbsp;<button id="addStudents">Add Student</button><button id="addGradedTask">Add graded task</button></h1></header>
     	<table id="llistat">
     		
     	</table>
-    
+    </div>
   </body>
 
 </html>
