Attitude tasks do it

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     	
     	
     </div>
-    <a href="docs/gen/index.html">a</a>
+    <!--<a href="docs/gen/index.html">a</a>-->
   </body>
 
 </html>
