--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <head>
     <link rel="stylesheet" href="style.css">
     <script src="dist/main.js" ></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
+    <title>StudentsRank-SM</title>
   </head>
 
   <body>
